# sentinel-inference

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker-build.yml
src/: config.rs  main.rs  weights.rs
