# ========== DOSYA: sentinel-inference/Cargo.toml ==========
[package]
name = "sentinel-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-nats = "0.34"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures-util = "0.3"
qdrant-client = "1.10"
chrono = "0.4"
tonic = "0.11"
tower = "0.4"

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.11"