# ========== DOSYA: sentinel-inference/Cargo.toml ==========
[package]
name = "sentinel-inference"
version = "0.9.4"
edition = "2021"

[dependencies]
# HFT Async Runtime
tokio = { version = "1.36", features = ["full"] }
async-nats = "0.34"
prost = { version = "0.12", features = ["derive"] }
tonic = "0.11"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
futures-util = "0.3"

# Vektör DB & Matematik
qdrant-client = "1.10"
uuid = { version = "1.7", features = ["v4"] }

[build-dependencies]
# Protobuf derleme araçları (build.rs için şart)
prost-build = "0.12"
tonic-build = "0.11"