[package]
name = "sentinel-inference"
version = "4.0.1"
edition = "2021"
description = "VQ-Capital V4 Omniscience Neural Engine (ONNX/12D)"

[dependencies]
# HFT Async Runtime
tokio = { version = "1.36", features = ["full"] }
async-nats = "0.34"
prost = { version = "0.12", features = ["derive"] }
tonic = "0.11"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
futures-util = "0.3"

# Vektör DB
qdrant-client = "1.10"
uuid = { version = "1.7", features = ["v4"] }

# 🚀 ML ENTEGRASYONU (FAZ 3)
# CERRAHİ: ndarray paketi versiyon çakışmasını önlemek için silindi.
ort = { version = "2.0.0-rc.9", features = ["cuda"] } 

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.11"